[package]
authors = ["cedar12.zxd@qq.com"]
edition = "2021"
license = "Apache 2.0"
name = "eastc"
version = "0.1.0"
repository = "https://github.com/cedar12/east_bin"
homepage = "https://github.com/cedar12/east_bin"
build = "src/build.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1.52"
chrono = "0.4.24"
east_core = {git = "https://github.com/cedar12/east_core.git"}
lazy_static = "1.4.0"
log = "0.4.14"
log4rs = "1.0.0"
rand = "0.8.5"
rsa = "0.9.2"
schemars = "0.8.8"
serde = {version = "1.0.132", features = ["derive"]}
serde_json = "1.0.73"
serde_yaml = "0.8.23"
systemstat = "0.2.3"
tokio = {version = "1.13.0", features = ["full"]}
cron="0.5"


[target.'cfg(windows)'.build-dependencies]
winres = "0.1"